# winterthur-app

./: .dockerignore  .env.example  .env.j2  .gitignore  .nvim.lua  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  DEVNOTES.md  DEVNOTES.rst  Dockerfile  LICENSE  Makefile  README.md  docker-compose-local.yml  docker-compose.yml  docker-compose.yml.j2  install.sh  package-lock.json  package.json  pyproject.toml  schema.dbml
.github/: dependabot.yml
.github/workflows/: build-and-publish.yml  cicd.yml
authuser/: README.md  urls.py  views.py
authuser/migrations/: 0001_initial.py
common/: models.py
common/management/commands/: wait_for_db.py
config/: settings.py  urls.py
denig/: admin.py  apps.py  models.py  resources.py  tests.py  urls.py  views.py
denig/fixtures/: collection.yaml  languages.yaml
denig/management/commands/: cleannan.py  fixtags.py  importdata.py  importfragments.py  importimages.py
denig/migrations/: 0001_initial.py  0002_alter_document_tags.py  0003_fragment_languages_fragment_transcription_and_more.py  0004_alter_fragment_options_remove_fragment_collection_and_more.py  0005_document_page.py  0006_document_image.py  0007_alter_document_doctype.py  0008_alter_document_doctype.py  0009_alter_document_doctype_delete_textblock.py  0010_alter_fragment_id.py  0011_fragment_line_number.py  0012_document_docside_alter_document_doctype.py  0013_remove_document_languages_alter_fragment_languages.py  0014_delete_collectionmanager.py  0015_remove_document_image_document_item_file_and_more.py  0016_remove_document_page_document_page_range_and_more.py  0017_alter_document_tags.py  0018_musicscore_alter_document_id_and_more.py  0019_alter_musicscore_audio_recordig_file_and_more.py  0020_remove_musicscore_composer_and_more.py  0021_rename_document_images_related_document_and_more.py  0022_alter_images_id.py  0023_rename_images_image.py  0024_remove_document_item_file.py  0025_document_item_file.py  0026_remove_document_item_file_and_more.py  0027_rename_document_image_related_document_and_more.py  0028_remove_document_item_file_and_more.py  0029_alter_document_notes.py  0030_alter_document_description.py  0031_document_document_id.py  0032_document_slug.py  0032_musicscore_related_document_alter_document_docside_and_more.py  0033_alter_document_slug.py  0033_musicscore_arrangement_by_musicscore_composer_and_more.py  0034_alter_document_slug.py  0034_rename_audio_recordig_file_musicscore_audio_recording_file_and_more.py  0035_alter_document_slug.py  0037_alter_document_slug.py  0038_remove_document_slug.py  (+5 more)
denig/templatetags/: filters.py
essays/: admin.py  models.py
essays/migrations/: 0001_initial.py  0002_alter_essay_body.py  0003_essaycontent_remove_essay_meta_description_and_more.py  0004_alter_essay_body.py  0005_alter_essay_body.py  0006_alter_essay_body_delete_essaycontent.py  0007_alter_author_user_alter_essay_published.py  0008_remove_author_user_author_display_name_author_email_and_more.py  0009_alter_author_email_alter_essay_slug.py  0010_author_institution_images.py  0011_blogindexpage.py  0012_essaypage_rename_blogindexpage_essayindexpage.py  0013_essaypage_author.py  0014_essaypagegalleryimage.py  0015_delete_essaypagegalleryimage.py  0016_essaypagegalleryimage.py  0017_essaypage_author_bio.py  0018_remove_essay_author_remove_essay_body_and_more.py  0019_essaypage_doi_essaypage_doi_url.py  0020_alter_essaypage_intro.py  0021_essaypage_preview_image.py  0022_forensicpage_galleryimage.py  0023_forensicpage_related_manuscript_page_and_more.py
footnotes/: admin.py  apps.py  models.py
footnotes/migrations/: 0001_initial.py  0002_alter_footnote_options.py  0003_alter_footnote_content.py  0004_alter_footnote_source.py  0005_footnote_created_footnote_last_modified.py
static/css/: custom.css
static/js/: denig.js
static/openseadragon/: openseadragon.js  openseadragon.min.js
templates/: 404.html  about.html  base.html  education.html  forensic_page.html  forensics.html  forensics_partial.html  index.html  manuscript.html  manuscript_musicscore.html  manuscript_page.html  music.html  robots.txt  scholarship.html
templates/partials/: citation.html  document_display.html  manuscript_pagination.html
theme/static_src/: package-lock.json  package.json  tailwind.config.js
(+3 files in other folders)
