[tool.poetry]
name = "winterthur-app"
version = "0.1.0"
description = "Web application for the Denig Manuscript project"
authors = ["Jason Heppler <jason.heppler@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "winterthur_app"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.8"
django-tailwind = "^4.0.1"
django-htmx = "^1.23.0"
django-extensions = "^4.1"
django-environ = "^0.12.0"
humanfriendly = "^10.0"
django-taggit = "^5.0.1"
taggit-selectize = "^2.11.0"
django-multiselectfield = "^0.1.13"
pillow = "^10.4.0"
django-admin-interface = "^0.30.0"
python-dotenv = "^1.1.0"
django-import-export = "^4.3.7"
django-allauth = "^65.7.0"
daphne = "^4.0.0"
django-dbml = "^0.10.1"
django-prose = "^2.1.0"
psycopg2 = "^2.9.10"
wagtail = "^6.4.1"
django-modelcluster = "^6.4"
pandas = "^2.2.3"
numpy = "^2.2.5"
django-imagekit = "^5.0.0"
boto3 = "^1.38.6"
django-storages = "^1.14.6"
django-cleanup = "^9.0.0"
whitenoise = "^6.9.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
djhtml = "^3.0.7"
pre-commit = "^4.2.0"
django-debug-toolbar = "^5.2.0"
pytest-django = "^4.11.1"
django-extensions = "^4.1"
django-coverage-plugin = "^3.0.0"
pylint-django = "^2.6.1"
pytest-sugar = "^1.0.0"


[tool.poetry.group.base.dependencies]
python-slugify = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.djlint]
profile="django"